--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 table {
-    background-color: #C5D6C6;
+    background-color: #000000;
     border-spacing: 0;
 }
 
@@ -28,10 +28,10 @@ span {
 #random {
     padding: .75em;
     border-radius: 5px;
-    border: none;    
+    border: 3px;    
     background: linear-gradient(
         to bottom right,
-        #C5DEC6, #587559);
+        #222222, #333333);
 }
 
 td.dead {
