--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ span {
     border: 3px;    
     background: linear-gradient(
         to bottom right,
-        #222222, #333333);
+        #ffffff, #171717);
 }
 
 td.dead {
