--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ table {
 }
 
 td {
-    border: 1px solid #F1F5DA;
+    border: 1px solid #161616;
     border-radius: 3px;
     width: 10px;
     height: 10px;
@@ -39,6 +39,6 @@ td.dead {
 }
 
 td.live {
-    background-color: #CC4774;
+    background-color: #ffffff;
     border-radius: 10px;
 }
