--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     line-height: 1.5;
     color: #ffffff;
     background-color: #011002;
-    margin: 0;
+    margin: 1cm;
     padding-left: 2cm;
     padding-right: 2cm;
     padding-top: 1cm;
