--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 30px;
     line-height: 1.5;
-    color: #ffffff;
-    background-color: #011002;
+    color: #000000;
+    background-color: #ff9eef;
     margin: 1cm;
     padding-left: 2cm;
     padding-right: 2cm;
@@ -20,10 +20,10 @@ body {
   }
   
   #main-content{
-    background-color: #001d01;
+    background-color: #ff9eef;
     border-radius: 1cm;
     padding: 1cm;
     border-bottom-style: ridge;
     border-top-style: ridge;
-    border-color: #003804;
+    border-color: #fa5eeb;
   }
