--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 30px;
     line-height: 1.5;
     color: #000000;
-    background-color: #ff9eef;
+    background-color: #f474df;
     margin: 1cm;
     padding-left: 2cm;
     padding-right: 2cm;
