--- a/style.css
+++ b/style.css
@@ -25,11 +25,11 @@ body {
     padding: 1cm;
     border-bottom-style: ridge;
     border-top-style: ridge;
-    border-color: #fa5eeb;
+    border-color: #93acff;
   }
 
   #infoarea{
-    background-color: #ff53e2;
+    background-color: #ff9eef;
     border-radius: 1cm;
     padding: 1cm;
     border-bottom-style: ridge;
