--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 30px;
+    font-size: 15px;
     line-height: 1.5;
     color: #000000;
-    background-color: #ff9eef;
+    background-color: #9ec8ff;
     margin: 1cm;
     padding-left: 2cm;
     padding-right: 2cm;
@@ -19,7 +19,7 @@ body {
     margin: 10px 0;
   }
   
-  #main-content{
+  #main-content {
     background-color: #ff76e8;
     border-radius: 1cm;
     padding: 1cm;
@@ -28,11 +28,24 @@ body {
     border-color: #93acff;
   }
 
-  #infoarea{
+  #infoarea {
     background-color: #ff9eef;
     border-radius: 1cm;
     padding: 1cm;
     border-bottom-style: ridge;
     border-top-style: ridge;
     border-color: #fb3ee8;
+  }
+
+  a:link, a:visited {
+    background-color: #5ff436;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  a:hover, a:active {
+    background-color: rgb(72, 255, 0);
   }
