--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     font-weight: bold;
     font-size: 30px;
     color: #000000;
-    margin: 10px 0;
+    margin: 0.2cm;
   }
   
   #main-content {
@@ -35,12 +35,13 @@ body {
     border-bottom-style: ridge;
     border-top-style: ridge;
     border-color: #fb3ee8;
+    margin-top: 1cm;
   }
 
   a:link, a:visited {
-    background-color: #5ff436;
+    background-color: #36c5f4;
     color: white;
-    padding: 1cm;
+    padding: 0.2cm;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -48,5 +49,5 @@ body {
   }
   
   a:hover, a:active {
-    background-color: rgb(72, 255, 0);
+    background-color: rgb(0, 229, 255);
   }
