--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.5;
-    color: #000000;
-    background-color: #8e8e8e;
-    margin: 1cm;
+    color: #ffffff;
+    background-color: #011002;
+    margin: 0;
     padding-left: 2cm;
     padding-right: 2cm;
     padding-top: 1cm;
@@ -14,30 +14,75 @@ body {
   
   h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
-    font-size: 30px;
-    color: #000000;
-    margin: 0.2cm;
+    color: #fff;
+    margin: 10px 0;
   }
   
-  #main-content {
-    background-color: #d4d4d4;
-    border-radius: 0.5cm;
+  #main-content{
+    background-color: #001d01;
+    border-radius: 1cm;
     padding: 1cm;
     border-bottom-style: ridge;
     border-top-style: ridge;
-    border-color: #93acff;
+    border-color: #003804;
   }
-
-  #infoarea {
-    background-color: #ffffff;
+  
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  header h1 {
+    margin: 0;
+  }
+  
+  nav {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  
+  nav li {
+    margin: 0 10px;
+  }
+  
+  main {
+    padding: 20px;
+  }
+  
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  #submit {
+    background-color: aquamarine;
+    border-radius: 20px;
+    border-color: aquamarine;
+  }
+  #navbar {
+    padding-bottom: 0.5cm;
+    background-color: #012403;
     border-radius: 0.5cm;
-    padding: 1cm;
+    padding-top: 0.5cm;
+    padding-left: 0.5cm;
     border-bottom-style: ridge;
     border-top-style: ridge;
-    border-color: #cdcdcd;
+    border-color: #003804;
     margin-top: 1cm;
+    margin-bottom: 1cm;
   }
-
   a:link, a:visited {
     background-color: #61d5fc;
     color: white;
