--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   
   header {
     background-color: #333;
-    color: #fff;
+    color: #000;
     padding: 20px;
     text-align: center;
   }
@@ -84,7 +84,7 @@ body {
     margin-bottom: 1cm;
   }
   a:link, a:visited {
-    background-color: #61d5fc;
+    background-color: #011002;
     color: white;
     padding: 0.2cm;
     text-align: center;
